Fixed issue on mobile (bg not covering space)

--- a/home/static/css/home.css
+++ b/home/static/css/home.css
@@ -92,7 +92,7 @@ h4 {
 
 .particles-js-canvas-el {
     background: #000000;
-    max-height: 40rem;
+    max-height: 60rem;
 }
 
 .white-block {
